# referia

./: .buildinfo  .gitignore  .readthedocs.yml  CIP_SUMMARY.md  README.md  access_tests.py  assess_tests.py  contributing.html  genindex.html  index.html  inheritance.html  installation.html  introduction.html  llm_integration.html  llm_pdf_review.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  referia.code-workspace  search.html  searchindex.js  setup.py  test_access.py  test_assess.py
.cursor/rules/: cip.mdc
.doctrees/: contributing.doctree  index.doctree  inheritance.doctree  installation.doctree  introduction.doctree  llm_integration.doctree  llm_pdf_review.doctree  quickstart.doctree
.doctrees/modules/: assess.doctree  config.doctree  util.doctree
.doctrees/usage/: assessment.doctree  basic_concepts.doctree  compute.doctree
.github/workflows/: docs.yml  python-tests.yml  test.yml
_downloads/2caaa2f5ceec7d758152c25e9d3b3d4e/: compute.py
_downloads/f605d84fc0c0ac827f11654a524c4535/: llm.py
_modules/: index.html
_modules/lynguine/assess/: compute.html  data.html
_modules/lynguine/config/: interface.html
_modules/referia/assess/: compute.html  data.html  review.html
_modules/referia/config/: interface.html
_modules/referia/util/: files.html  misc.html  plot.html  system.html  text.html  widgets.html
_sources/: contributing.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  llm_integration.md.txt  llm_pdf_review.md.txt
_sources/modules/: config.rst.txt
_sources/usage/: assessment.rst.txt  compute.rst.txt
applications/: interview-scoring.yml  jamboard-interview.yml
backlog/bugs/: 2025-05-28_index-missing-from-mapping.md
backlog/documentation/: 2025-12-21_document-mode-include-query.md
backlog/features/: 2025-12-17_custom-llm-chapter-queries.md  2025-12-21_implement-mode-parameter-compute.md  2025-12-21_include-query-flag-llm-custom-query.md  2025-12-21_update-thesis-review-ui-append-mode.md
backlog/infrastructure/: 2025-10-10_implement-proper-layering-fix.md  2025-12-21_test-mode-functionality.md
cip/: README.md  cip0001.md  cip0002.md  cip0003.md  cip0004.md  cip0005.md  cip0006.md  cip0007.md  cip_template.md
docs/: Makefile  conf.py  contributing.rst  index.rst  inheritance.rst  llm_integration.md  llm_pdf_review.md  quickstart.rst  test_build.py
docs/_static/: cip0003_implementation.md
docs/examples/: test_compute.ipynb  test_referia.ipynb
docs/examples/.ipynb_checkpoints/: test_referia-checkpoint.ipynb
docs/modules/: assess.rst  util.rst
docs/usage/: basic_concepts.rst  compute.rst
examples/: YOUR_CONFIG_MIGRATION.md  env_template.txt  llm_integration_example.yml  llm_usage_example.py  thesis_llm_review_example.py  thesis_llm_review_example.yml
modules/: assess.html  config.html  util.html
notebooks/: _config.yml  _referia.yml  assessment.ipynb  data-analysis-template.ipynb  details.xlsx  ref-assessment-notebook.ipynb  ref-impact-assessment-notebook.ipynb  scores.xlsx
notebooks/environment/: _config.yml  assessment.ipynb
notebooks/excel_gift_example/: _referia.yml  assessment.ipynb  gifts.xlsx
notebooks/gsheet_example/: _referia.yml  assessment.ipynb
notebooks/impact/: _config.yml  assessment.ipynb
notebooks/meetings/: _referia.yml  assessment.ipynb
notebooks/outputs/: _config.yml  assessment.ipynb
pyreview/: __init__.py
ref/: access.py  assess.py  defaults.yml  process.py
ref/tests/access/: access_tests.py
referia/: __init__.py  access.py  assess.py  compute.py  config.py  data.py  defaults.yml  display.py  exceptions.py  fake.py  fileutil.py  log.py  old_log.py  plotutil.py  render.py  settings.py  system.py  sysutil.py  template.py  textutil.py  util.py  widgets.py
referia/assess/: compute.py  data.py  review.py
referia/config/: interface.py  settings.py
referia/testing/: access_tests.py
referia/tests/: test_assess_compute.py  test_assess_data.py  test_assess_data_compute.py  test_assess_review.py  test_config_interface.py  test_llm_integration.py  test_util_files.py  test_util_liquid.py  test_util_misc.py  test_util_system.py  test_util_text.py  test_util_widgets.py
referia/tests/access/: access_tests.py
referia/util/: files.py  jupyter.py  liquid.py  llm.py  misc.py  plot.py  system.py  text.py  widgets.py
tenets/referia/: explicit-implicit-separation.md  user-oriented-convenience.md
tests/: test_implicit_mapping_behavior.py
usage/: assessment.html  basic_concepts.html  compute.html
