[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.3.1"  
deepdiff = "^6.6.0"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.1"
toml = ">=0.10.2"

[tool.poetry]
name = "referia"
version = "0.2.0"
description = "Library for processing data using jupyter notebooks."
authors = ["Neil D. Lawrence <email@domain.here>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lawrennd/referia"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = ">=3.11"
XlsxWriter = "*"
pandas = "*"
numpy = ">=1.0.0,<2.0.0" # to deal with this https://github.com/explosion/thinc/issues/939
jupyter = "*"
matplotlib = "*"
unidecode = "*"
wordcloud = "*"
thinc = "*"
spacy = "*"
# spacy models, releases are found here: https://github.com/explosion/spacy-models/releases/. See also the poetry add command in the github workflow.
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
pillow = "*"
google-auth-oauthlib = "*"
pypandoc = "*"
pypdftk = "*"
pdfannots = "*"
lynguine = { git = "https://github.com/lawrennd/lynguine.git" }
#lynguine = "*"
# You can include platform-specific dependencies like this:
# Note: This is just an example, you might need to adjust for actual requirements.
gspread_pandas = { version = "*", platform = "darwin" }
appscript = { version = "*", platform = "darwin" }

# The docs group remains for local development but the dependencies
# are duplicated in dev-dependencies to ensure they're installed in CI
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.1"
toml = ">=0.10.2"


[tool.poetry.group.dev.dependencies]
# Documentation dependencies have been moved to dev-dependencies section

[build]
# Include if you have any build scripts, though this is rare
script = "path/to/script"


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
